--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>網頁名</title>
+    <title>hello</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>標題</h1>
-    <p>段落一</p>
-    <p>段落二</p>
+    <div class="fake"></div>
+    <div class="container"><img src="a.png" /></div>
+    <div class="fake"></div>
   </body>
 </html>
