--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   </head>
   <body>
     <div class="fake"></div>
-    <div class="container"><img src="a.png" /></div>
+    <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+    </div>
     <div class="fake"></div>
   </body>
 </html>
