--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   <body>
     <div class="fake"></div>
     <div class="container">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
+      <div class="item1">1</div>
+      <div class="item2">2</div>
+      <div class="item3">3</div>
     </div>
     <div class="fake"></div>
   </body>
