--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="fake"></div>
-    <div class="container">
-      <div class="item1">1</div>
-      <div class="item2">2</div>
-      <div class="item3">3</div>
-    </div>
-    <div class="fake"></div>
+    <h1>javascript is cool</h1>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
