--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>javascript is cool</h1>
+    <div class="btn" onclick="toggle_info()">詳細資料</div>
+    <div id="foo">...</div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
